--- a/withdraw.html
+++ b/withdraw.html
@@ -107,7 +107,7 @@
           <li><a href="dashboard.html">Home</a></li>
           <li><a href="deposit.html">Deposit</a></li>
           <li><a href="withdraw.html" class="active">Withdraw</a></li>
-          <li><a href="alldata.html">All Data</a></li>
+          <li><a href="index.html">Logout</a></li>
         </ul>
       </nav>
     </header>
